[package]
name = "mise"
version = "0.1.0"
edition = "2021"
authors = ["mise contributors"]
description = "A unified CLI tool for file scanning, anchor management, and code search"
license = "MIT"
repository = "https://github.com/talkincode/mise"
readme = "README.md"
keywords = ["cli", "search", "anchor", "scan"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system
walkdir = "2"
ignore = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Async (for watch, optional)
tokio = { version = "1", features = ["full"], optional = true }

# Regex
regex = "1"

# Lazy static
once_cell = "1"

# Parallel processing (optional)
rayon = { version = "1.10", optional = true }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha1 = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Colored output (optional)
colored = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[features]
default = []
watch = ["tokio"]
parallel = ["rayon"]

[[bin]]
name = "mise"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
